--- a/Lecture/Week 2/2.1 - Visualizing Relationships Between Categorical Features.ipynb
+++ b/Lecture/Week 2/2.1 - Visualizing Relationships Between Categorical Features.ipynb
@@ -716,9 +716,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -730,7 +730,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
