--- a/Lecture/Week 3/3.2 - Visualizing Relationships in Space and Time.ipynb
+++ b/Lecture/Week 3/3.2 - Visualizing Relationships in Space and Time.ipynb
@@ -505,9 +505,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -519,7 +519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.13.5"
   },
   "nbpresent": {
    "slides": {
