--- a/Lecture/Week 4/4.2 - EDA and Preparing Data For Machine Learning Models.ipynb
+++ b/Lecture/Week 4/4.2 - EDA and Preparing Data For Machine Learning Models.ipynb
@@ -758,9 +758,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -772,7 +772,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
